--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
-
+body{
+  background-image:url("http://38.media.tumblr.com/c4cf64f9109c172745b5c8505c6b6099/tumblr_njig7nDRil1sgialvo1_500.gif")
+  
+}
+body{
+  color:antiquewhite
+}
